# lib-loading

./: Cargo.toml
executor/: Cargo.toml
executor/src/: main.rs
lib/: Cargo.toml
lib/src/: build.rs  foo.rs  lib.rs
lib/src/proto/: auth.proto  payment.proto
types/: Cargo.toml
types/src/: lib.rs
